--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,20 @@ certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
 cryptography==43.0.1
+dj-database-url==2.2.0
 Django==5.1.1
 django-allauth==65.0.2
+django-rest-framework==0.1.0
+djangorestframework==3.15.2
 idna==3.10
 oauthlib==3.2.2
+psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.9.0
 python-dotenv==1.0.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 sqlparse==0.5.1
+typing_extensions==4.12.2
 urllib3==2.2.3
+whitenoise==6.7.0
