Install gunicorn for heroku

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,11 @@ cryptography==43.0.1
 dj-database-url==2.2.0
 Django==5.1.1
 django-allauth==65.0.2
-django-rest-framework==0.1.0
 djangorestframework==3.15.2
+gunicorn==23.0.0
 idna==3.10
 oauthlib==3.2.2
+packaging==24.1
 psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.9.0
